--- a/app/src/main/res/layout/fragment_arcamera.xml
+++ b/app/src/main/res/layout/fragment_arcamera.xml
@@ -3,24 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="fill_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/arcamera_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp" />
-        <Button
+        <com.google.android.gms.maps.MapView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/mapview"
+                />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
             android:id="@+id/ar_button"
-            android:text="ar test"
             />
-    </LinearLayout>
-
 </FrameLayout>
