--- a/app/src/main/res/layout/fragment_noti.xml
+++ b/app/src/main/res/layout/fragment_noti.xml
@@ -6,10 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".ui.setting.NotificationFragment">
 
-    <ListView
-        android:layout_height="wrap_content"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:id="@+id/listview_noti"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/list_item_title"
+            android:text="[공지사항] 2학기 비대면 관련..."
+            android:textSize="25dp"
+            android:textColor="#000000"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/list_item_date"
+                android:text="관리자"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/list_item_author"
+                android:text="06/22"
+                android:textSize="18dp"
+                />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </FrameLayout>
